[tool.poetry]
name = "mood-app"
version = "0.1.0"
description = ""
authors = ["lorenzo-analisou <167652280+lorenzo-zappone@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.35.0"
streamlit-oauth = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
